--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h2 style="color: #fff;">1&euro; = <b id="cc1">missingno</b> XLM // <b id="cc2">missingno</b> BTC</h2>
   <script src="./crypric.js"></script>
   <div id="search">
-	<form action="https://duckduckgo.com/search" method="get" target="" autocomplete="off">
+	<form action="https://duckduckgo.com/" method="get" target="" autocomplete="off">
 		<input class="searchbar" type="text" autofocus name="q" placeholder="DuckDuckGo" > 
 	</form>
 	&nbsp;<->&nbsp;
