--- a/index.html
+++ b/index.html
@@ -51,18 +51,24 @@
       <div class="con">
         <h1 class="title" style="color: #06f000">Tools</h1>
         <ul class="list">
+          <li><a href="http://snapdrop.net">Snapdrop.net</a></li>
+          <li><a href="https://unshorten.link/">UnshortenLink</a></li>
           <li><a href="http://web.archive.org/save">WebArchive</a></li>
           <li><a href="https://toolbox.snopyta.org/">Cyberchef</a></li>
           <li><a href="https://hoppscotch.io/">Hoppscotch</a></li>
-		  <li><a href="https://15.ai/">15.ai</a></li>
-		  <li><a href="https://textfancy.com">Text FX</a></li>
-		  <li><a href="https://waifu2x.booru.pics/">Waifu2x</a></li>
-		  <li><a href="https://deepai.org/machine-learning-model/colorizer">Colorize</a></li>
-		  <li><a href="https://numeracija.rrt.lt">RRT NUMB</a></li>
-		  <li><a href="https://pkgs.org/">Linux Pckgs</a></li>
-		  <li><a href="https://repo.manjaro.org/">ManjaroRepo</a></li>
-		  <li><a href="https://www.speedguide.net/ports.php">PortDB</a></li>
-		  <li><a href="http://steamdb.info/">SteamDB</a></li>
+		      <li><a href="https://15.ai/">15.ai</a></li>
+		      <li><a href="https://textfancy.com">Text FX</a></li>
+		     <li><a href="https://waifu2x.booru.pics/">Waifu2x</a></li>
+		     <li><a href="https://deepai.org/machine-learning-model/colorizer">Colorize</a></li>
+		     <li><a href="https://numeracija.rrt.lt">RRT NUMB</a></li>
+		      <li><a href="https://pkgs.org/">Linux Pckgs</a></li>
+		     <li><a href="https://repo.manjaro.org/">ManjaroRepo</a></li>
+		     <li><a href="https://www.speedguide.net/ports.php">PortDB</a></li>
+		      <li><a href="http://steamdb.info/">SteamDB</a></li>
+          <li><a href="https://www.fotoforensics.com/">Foto Forensics</a></li>
+          <li><a href="https://29a.ch/photo-forensics/">Forensically</a></li>
+          <li><a href="https://bgp.tools/">BGP Tools</a></li>
+          <li><a href="https://lg.lasagna.dev/?cmd=traceroute">IP Traceroute</a></li>
         </ul>
       </div>
       <div class="con">
@@ -71,7 +77,7 @@
           <li><a href="http://localhost:7777">WWWadm</a></li>
           <li><a href="http://192.168.1.1/shares/">CLOUD</a></li>
           <li><a href="http://192.168.1.2:3000">GIT</a></li>
-		  <li><a href="https://10.20.178.176">WG1</a></li>
+		  <li><a href="https://10.20.178.176:9091">WG1</a></li>
 		  <li><a href="https://10.20.178.176:3540">SMS</a></li>
         </ul>
       </div>
@@ -89,11 +95,14 @@
 	<a href="https://img.youtube.com/vi/dQw4w9WgXcQ/maxresdefault.jpg">YT Maxres</a> 
 	<a href="https://href.li/">HREF.LI</a> 
 	<a href="https://grabify.link">GRABIFY</a> 
-	<a href="https://upload.disroot.org/">TEMP FILE</a> 
+	<a href="https://upload.disroot.org/">TEMP FILE</a>
+  <a href="https://www.lettercount.com/">CharCnt</a>
+  <a href="https://brandfolder.com/workbench/extract-text-from-image">Img2Txt</a> 
 	</p>
 	<p>
 	<a href="spt.html">SPEEDTESTS</a> 
 	<a href="vk.htm">VK</a> 
+  <B><a href="https://github.com/frida">Frida</a> / <a href="https://portswigger.net/burp">Burp</a> / Mitmproxy</B>
 	200D 200E 200B 202E 3164
 	</p>
   </div>
