--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
 		  <li><a href="https://pixelfed.social">Pixelfed.social</a></li>
           <li><a href="https://reddit.com">Reddit</a></li>
           <li><a href="https://discord.com/app">Discord</a></li>
-		  <li><a href="https://invidious.site">YT Invidious</a></li>
-          <li><a href="https://bibliogram.art/">IG Bibliogram</a></li>
-          <li><a href="https://nitter.cc">TW Nitter</a></li>
+		  <li><a href="https://vidd.la/v/">YT Invidious</a></li>
                 </ul>
             </section>
             <section class="link-section">
