--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		     <li><a href="https://waifu2x.booru.pics/">Waifu2x</a></li>
 		     <li><a href="https://deepai.org/machine-learning-model/colorizer">Colorize</a></li>
           <li><a href="https://www.fotoforensics.com/">Foto Forensics</a></li>
-          <li><a href="https://29a.ch/photo-forensics/">Forensically</a></li>
+          <li><a href="https://29:00.ch/photo-forensics/">Forensically</a></li>
                 </ul>
             </section>
             <section class="link-section">
@@ -108,15 +108,16 @@
 	<a href="https://href.li/">HREF.LI</a>
 	<a href="https://grabify.link">GRABIFY</a>
 	<a href="https://upload.disroot.org/">TEMP FILE</a>
-  <a href="https://www.lettercount.com/">CharCnt</a>
   <a href="https://brandfolder.com/workbench/extract-text-from-image">Img2Txt</a>
 	</p>
 
 	<p>
 	<a href="ttc.html">Realtime QR</a>
-	<a href="spt.html">SPEEDTESTS</a>
-	<a href="vk.htm">VK</a>
+	<a href="duration.html">Date Duration</a>
+	<a href="chrcount.html">CharCnt</a>
 	<a href="hdbc.htm">HDBCalc</a>
+	<a href="vk.htm">VK</a>
+	<a href="spt.html">SPEEDTESTS</a>
   <B><a href="https://github.com/frida">Frida</a> / <a href="https://portswigger.net/burp">Burp</a> / Mitmproxy</B>
 	200D 200E 200B 202E 3164
 	</p>
