--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	<a href="ttc.html">Realtime QR</a>
 	<a href="duration.html">Date Duration</a>
 	<a href="chrcount.html">CharCnt</a>
-	<a href="hdbc.htm">HDBCalc</a>
+	<a href="hdbc.html">HDBCalc</a>
 	<a href="vk.htm">VK</a>
 	<a href="spt.html">SPEEDTESTS</a>
   <B><a href="https://github.com/frida">Frida</a> / <a href="https://portswigger.net/burp">Burp</a> / Mitmproxy</B>
