--- a/duration.html
+++ b/duration.html
@@ -120,6 +120,7 @@ const remainingDays2 = days % 30;
 //console.log(months + " months, " + remainingDays2 + " days");
 
     durationSpan.innerText = ryears +' years and '+remainingDays+' days or '+rmonths+' months and '+remainingDays2+' days'+"\n"+duration;
+	updateUrlParams();
   }
   
   // event listeners
