--- a/donate.html
+++ b/donate.html
@@ -45,6 +45,7 @@
       <h1>Donation Links</h1>
       <ul>
         <li><a href="https://liberapay.com/dw5/">LiberaPay</a></li>
+        <li>STORJ Tokens 0xccfbe63040e468f1eE9273D980E29A0057A994D6</li>
         <!--<li><a href="#">#</a>LINK</li>-->
       </ul>
     </div>
