--- a/index.html
+++ b/index.html
@@ -108,11 +108,13 @@
 	<a href="https://href.li/">HREF.LI</a>
 	<a href="https://grabify.link">GRABIFY</a>
 	<a href="https://upload.disroot.org/">TEMP FILE</a>
+    <a href="https://it-tools.tech/">IT Tools (no cyberchef?)</a>
   <a href="https://brandfolder.com/workbench/extract-text-from-image">Img2Txt</a>
 	</p>
 
 	<p>
 	<a href="ttc.html">Realtime QR</a>
+    <a href="concat.html">ffmpeg concat</a>
 	<a href="duration.html">Date Duration</a>
 	<a href="chrcount.html">CharCnt</a>
 	<a href="hdbc.html">HDBCalc</a>
