--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 		     		      <li><a href="http://steamdb.info/">SteamDB</a></li>
 		     		                <li><a href="https://bgp.tools/">BGP Tools</a></li>
           <li><a href="https://lg.lasagna.dev/?cmd=traceroute">IP Traceroute</a></li>
+          <li><a href="durationtime.html">Date+Time duration</a></li>
                 </ul>
             </section>
 
@@ -115,7 +116,7 @@
 	<p>
 	<a href="ttc.html">Realtime QR</a>
     <a href="concat.html">ffmpeg concat</a>
-	<a href="duration.html">Date Duration</a>
+	<a href="duration.html">V1 Date Duration</a>
 	<a href="chrcount.html">CharCnt</a>
 	<a href="hdbc.html">HDBCalc</a>
 	<a href="vk.htm">VK</a>
