--- a/ttc.html
+++ b/ttc.html
@@ -6,7 +6,8 @@
 <body>
   <h1>QR Code Generator</h1>
   <p>Enter the text you want to encode in the QR code:</p>
-  <textarea id="text-input" type="text" oninput="generateQRCode()"/>
+  <textarea id="text-input" type="text" oninput="generateQRCode()">
+  </textarea>
   <br>
   <br>
   <canvas id="qr-code"></canvas>
