--- a/ttc.html
+++ b/ttc.html
@@ -4,6 +4,9 @@
   <title>QR Code Generator</title>
 </head>
 <body>
+  <pre id="copyText">
+    <span>explorer http://ddg.gg</span>
+  </pre>
   <h1>QR Code Generator</h1>
   <p>Enter the text you want to encode in the QR code:</p>
   <textarea id="text-input" oninput="generateQRCode()"></textarea>
