remove protonmail bc enshittification, cleanup

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="top-div">
             <div id="clock-div">
                 <h1 id="clock">
-                    00/00/0000
+                    0000-00-00
                     00:00:00
                 </h1>
             </div>
@@ -43,7 +43,6 @@
                 <h2 class="link-section-title red">General</h2>
                 <hr />
                 <ul class="link-list">
-          <li><a href="https://mail.proton.me/">ProtonMail</a></li>
           <li><a href="https://wego.here.com">HERE Maps</a></li>
           <li><a href="https://www.deepl.com/translator">DeepL Translate</a></li>
           <li><a href="https://translate.dr460nf1r3.org/">GTranslate (Lingva)</a></li>
@@ -54,35 +53,33 @@
                 </ul>
             </section>
             <section class="link-section">
-                <h2 class="link-section-title blue">Social</h2>
+                <h2 class="link-section-title blue">Resources</h2>
                 <hr />
                 <ul class="link-list">
           <li><a href="https://vidd.la">Viddla</a></li>
           <li><a href="https://youtube.com">YouTube</a></li>
-          <li><a href="https://twitter.com">Twitter</a></li>
-		  <li><a href="https://mastodon.online">Mastodon.online</a></li>
-		  <li><a href="https://pixelfed.social">Pixelfed.social</a></li>
-          <li><a href="https://reddit.com">Reddit</a></li>
-          <li><a href="https://discord.com/app">Discord</a></li>
 		  <li><a href="https://vidd.la/v/">YT Invidious</a></li>
+          <li><a href="ttc.html">Realtime QR</a></li>
+          <li><a href="concat.html">FFMPEG Concat builder</a></li>
+          <li><a href="uniq.html">Offline web UNIQ</a></li>
+          <li><a href="unispector.html">Unicode character inspector</a></li>
+          <li><a href="hex2flag.html">hex2flag</a></li>
                 </ul>
             </section>
             <section class="link-section">
                 <h2 class="link-section-title green">Tools</h2>
                 <hr />
                 <ul class="link-list">
-<li><a href="http://snapdrop.net">Snapdrop.net</a></li>
           <li><a href="https://unshorten.link/">UnshortenLink</a></li>
-          <li><a href="http://web.archive.org/save">WebArchive</a></li>
           <li><a href="https://toolbox.snopyta.org/">Cyberchef</a></li>
           <li><a href="https://yandex.com/images/">YReverseIMG</a></li>
           <li><a href="https://hoppscotch.io/">Hoppscotch</a></li>
-		      <li><a href="https://15.ai/">15.ai</a></li>
 		      <li><a href="https://textfancy.com">Text FX</a></li>
 		     <li><a href="https://waifu2x.booru.pics/">Waifu2x</a></li>
 		     <li><a href="https://deepai.org/machine-learning-model/colorizer">Colorize</a></li>
           <li><a href="https://www.fotoforensics.com/">Foto Forensics</a></li>
-          <li><a href="https://29:00.ch/photo-forensics/">Forensically</a></li>
+          <li><a href="https://29a.ch/photo-forensics/">Forensically</a></li>
+          <li><a href="https://grabify.link">GRABIFY</a></li>
                 </ul>
             </section>
             <section class="link-section">
@@ -90,14 +87,12 @@
                 <hr />
                 <ul class="link-list">
           <li><a href="https://porkbun.com/account">Porkbun</a></li>
-		  <li><a href="https://cloud.linode.com/">Linode</a></li>
-		  <li><a href="https://numeracija.rrt.lt">RRT NUMB</a></li>
 		  <li><a href="https://searx.neocities.org/">SearX RNG</a></li>
 		  <li><a href="//btdig.com/">BTDGG</a></li>
-		                <li><a href="https://pkgs.org/">Linux Pckgs</a></li>
+            <li><a href="https://pkgs.org/">Linux Pckgs</a></li>
 		     <li><a href="https://www.speedguide.net/ports.php">PortDB</a></li>
-		     		      <li><a href="http://steamdb.info/">SteamDB</a></li>
-		     		                <li><a href="https://bgp.tools/">BGP Tools</a></li>
+             <li><a href="http://steamdb.info/">SteamDB</a></li>
+            <li><a href="https://bgp.tools/">BGP Tools</a></li>
           <li><a href="https://lg.lasagna.dev/?cmd=traceroute">IP Traceroute</a></li>
           <li><a href="durationtime.html">Date+Time duration</a></li>
                 </ul>
@@ -107,7 +102,6 @@
 	<a href="http://www.unicode-symbol.com/block/Punctuation.html">Unicode</a>.<a href="http://qaz.wtf/u/">Toys</a>
 	<a href="https://img.youtube.com/vi/dQw4w9WgXcQ/maxresdefault.jpg">YT Maxres</a>
 	<a href="https://href.li/">HREF.LI</a>
-	<a href="https://grabify.link">GRABIFY</a>
 	<a href="https://upload.disroot.org/">TEMP FILE</a>
     <a href="https://it-tools.tech/">IT Tools (no cyberchef?)</a>
   <a href="https://brandfolder.com/workbench/extract-text-from-image">Img2Txt</a>
@@ -123,6 +117,7 @@
 	<a href="spt.html">SPEEDTESTS</a>
     <a href="unispector.html">unispector</a>
     <a href="tagy.html">tagy</a>
+    <a href="last4.html">last4</a>
   <B><a href="https://github.com/frida">Frida</a> / <a href="https://portswigger.net/burp">Burp</a> / Mitmproxy</B>
 	200D 200E 200B 202E 3164
 	</p>
