--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <a href="unispector.html">unispector</a>
     <a href="tagy.html">tagy</a>
     <a href="last4.html">last4</a>
+    <a href="snips.html">snips</a>
   <B><a href="https://github.com/frida">Frida</a> / <a href="https://portswigger.net/burp">Burp</a> / Mitmproxy</B>
 	200D 200E 200B 202E 3164
 	</p>
