--- a/snips.html
+++ b/snips.html
@@ -62,6 +62,7 @@ gap:8px;
 <details>
 <summary>main</summary>
 <pre id="copyText" style="border: dotted;">
+<pre>php -S [::]:1337</pre>
 <pre>dir *.mp4 /b /a-d | find /c /v ""</pre>
 <pre>wget -e robots=off</pre>
 <pre>spn.sh -p 1 tree.txt</pre>
